--- a/index.html
+++ b/index.html
@@ -1,15 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>JavaScript Concepts</title>
-  <link href="base.css" rel="stylesheet" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <title>The DOM</title>
+  <link rel="stylesheet" href="base.css">
 </head>
+
 <body>
-  <p>JavaScript Concepts</p>
-  <button class="bigger">Make me Bigger!</button>
-  <!-- <script src="custom-functions/cf.js"></script> -->
-  <script src="custom-functions/debugging.js"></script>
+  <div class="items">
+    <p>Hi I'm a item</p>
+    <div>
+      <h2>Sub Div</h2>
+      <p>Hi I'm a item</p>
+
+    </div>
+    <img src="https://source.unsplash.com/random/300x300" />
+    <p>Hi I'm a item</p>
+    <p>Hi I'm a item</p>
+  </div>
+  <script src="the-dom.js"></script>
 </body>
+
 </html>
