Add changes to the-dom.js

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 </head>
 
 <body>
-  <div class="items">
+  <div class="item item2">
     <p>Hi I'm a item</p>
     <div>
       <h2>Sub Div</h2>
       <p>Hi I'm a item</p>
-
     </div>
     <img src="https://source.unsplash.com/random/300x300" />
     <p>Hi I'm a item</p>
+    <img src="https://source.unsplash.com/random/300x300" />
     <p>Hi I'm a item</p>
   </div>
   <script src="the-dom.js"></script>
