--- a/index.html
+++ b/index.html
@@ -9,16 +9,19 @@
 </head>
 
 <body>
-  <div class="item item2">
-    <p>Hi I'm a item</p>
-    <div>
-      <h2>Sub Div</h2>
+  <div class="items">
+    <div class="item">
+      <img src="https://picsum.photos/200" />
       <p>Hi I'm a item</p>
     </div>
-    <img src="https://source.unsplash.com/random/300x300" />
-    <p>Hi I'm a item</p>
-    <img src="https://source.unsplash.com/random/300x300" />
-    <p>Hi I'm a item</p>
+    <div class="item item2">
+      <img src="https://picsum.photos/200" />
+      <h2>I am a heading</h2>
+      <p>Hi I'm a item</p>
+    </div>
+    <article class="item">
+      <h2>Im an article</h2>
+    </article>
   </div>
   <script src="the-dom.js"></script>
 </body>
