Use the insertAdjacentText to add an element before and after the p tag

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     </div>
     <article class="item">
       <h2>Im an article</h2>
+      <p class="hotDog">This is how many pizzas I ate! &#127789;</p>
     </article>
   </div>
   <script src="the-dom.js"></script>
