--- a/index.html
+++ b/index.html
@@ -6,9 +6,27 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>The DOM</title>
   <link rel="stylesheet" href="base.css">
+  <style>
+    h2 span {
+      display: none;
+    }
+
+    img {
+      transition: all 0.2s;
+    }
+
+    .round {
+      border-radius: 50%;
+      transform: rotate(1turn) scale(2);
+      box-shadow: 0 0 10px black;
+    }
+  </style>
 </head>
 
 <body>
+ 
+  <img class="nice round cool" src="https://picsum.photos/600" />
+
   <div class="items">
     <div class="item">
       <img src="https://picsum.photos/200" />
@@ -24,6 +42,7 @@
       <p class="hotDog">This is how many pizzas I ate! &#127789;</p>
     </article>
   </div>
+ 
   <script src="the-dom.js"></script>
 </body>
 
